# VedGov

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
docs/: tokenomics.md
pallets/inter-country-payments/: Cargo.toml
pallets/inter-country-payments/src/: lib.rs
